hw1/archw1/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archw1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: archw1
  template:
    metadata:
      labels:
        app: archw1
    spec:
      containers:
        - name: archw1
          image: ramoni73/microservices-2021-09:v1
          ports:
            - name: web
              containerPort: 80
