hw1/archw1/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: archw1
  labels:
    app: archw1
spec:
  containers:
    - name: archw1
      image: ramoni73/microservices-2021-09:v1
      ports:
        - containerPort: 80
