hw1/archw1/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: archw1-service
spec:
  selector:
    app: archw1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: LoadBalancer
