hw1/archw1/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archw1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /myapp($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: archw1-service
                port:
                  number: 8000
